# phoenix_tracker

./: .gitattributes  .gitignore  .proj  Dockerfile.pg_dump  LICENSE  README.md  build_frontend.sh  docker-compose.prod.yml  docker-compose.yml  start.ps1  start_with_localstack.ps1
backend/: .proj  API.md  Cargo.toml  Dockerfile  Dockerfile.dev
backend/data/: app.db
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_owner_and_user.rs  m20240102_000001_add_lock_version_to_tasks.rs  m20240103_000001_add_accepted_at_to_issues.rs  m20240520_000001_create_project_notes_table.rs  m20250319_000001_add_missing_indexes.rs  m20250527_202325_alter_notifications.rs  m20250527_202325_create_notifications.rs  m20250603_201757_add_lock_version_to_comments.rs  m20250604_000001_drop_token_table.rs  m20250604_000002_drop_user_setting_table.rs  m20250926_164833_create_file_uploads_table.rs  m20251018_204207_add_project_note_history.rs  m20251027_205543_create_project_note_parts.rs  m20251027_212252_create_project_note_tag.rs  m20251112_175958_add_notifcation_settings_table.rs
backend/scripts/: cli.js  client.js  fetch_backlog.js  login.js  login_and_fetch_backlog.sh
backend/scripts/AuthService/: logout.js
backend/scripts/IssueService/: createIssue.js  getAllIssues.js  getIssuesByTag.js  startIssue.js
backend/scripts/ProjectService/: createProject.js  project_service.js
backend/scripts/UserService/: getUserByEmail.js
backend/specs/: file-uploads.md
backend/src/: environment.rs  jwt.rs  main.rs  websocket.rs
backend/src/crud/: blocker.rs  comment.rs  comment_file_upload.rs  event_broadcaster.rs  file_upload.rs  history.rs  import_export.rs  issue.rs  issue_assignee.rs  issue_tag.rs  mod.rs  notification.rs  notification_settings.rs  owner.rs  project.rs  project_note.rs  project_note_history.rs  project_note_parts.rs  project_note_tag.rs  project_user.rs  status.rs  tag.rs  task.rs  token.rs  user.rs  user_setting.rs  work_type.rs
backend/src/endpoints/: auth.rs  blocker.rs  comment.rs  file_upload.rs  history.rs  import_export.rs  issue.rs  issue_assignee.rs  issue_tag.rs  mod.rs  notification.rs  owner.rs  project.rs  project_note.rs  project_note_part.rs  project_note_tag.rs  tag.rs  task.rs  user.rs
backend/src/entities/: blocker.rs  comment.rs  comment_file_upload.rs  file_upload.rs  history.rs  issue.rs  issue_assignee.rs  issue_tag.rs  mod.rs  owner.rs  (+13 more)
(+203 files in other folders)
