[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
http = "0.2"
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
axum-auth = "0.7.0"
futures = "0.3.31"
tower-service = "0.3.3"
tower = "0.5.2"
rand = "0.8.5"
serde_json = "1.0.134"
chrono ={ version = "0.4.39", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
serde_with = "3.12.0"
jsonwebtoken = "9.3.0"

[profile.dev]
incremental = true
