[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
http = "1.3"
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
axum-auth = "0.8"
futures = "0.3.31"
tower-service = "0.3.3"
tower = "0.5.2"
rand = "0.9"
serde_json = "1.0.134"
chrono ={ version = "0.4.39", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
serde_with = "3.12.0"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
serde_urlencoded = "0.7.1"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
comrak = "0.47"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }

[profile.dev]
incremental = true
